--- a/graph/index.html
+++ b/graph/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <iframe class="right-column" id="info" src="//legislation.openfisca.fr/variables/revdisp"></iframe>
+        <p id="loading">Chargement...</p>
+        <iframe class="right-column" id="info"></iframe>
         <div class="legend">
             Mesure calculée à l'échelle de :
             <div class="circle" id="individus"></div>Individu
