Add basic search

--- a/graph/index.html
+++ b/graph/index.html
@@ -30,6 +30,13 @@
                     <li><a href="/outils">Outils</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <form class="navbar-form">
+                            <div class="form-group">
+                                <input id="search-bar" type="text" class="form-control" placeholder="Search" onkeypress="update_graph();">
+                            </div>
+                        </form>
+                    </li>
                     <li><a href="/about">À propos</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
