Autocomplete search based on labels and variable names

--- a/graph/index.html
+++ b/graph/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
+    <script src="./bootstrap-typeahead.js"></script>
+
     <title>Graphe des dépendances des variables d'OpenFisca</title>
 </head>
 <body>
