Remove unused assets and use CDN

--- a/graph/index.html
+++ b/graph/index.html
@@ -2,13 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-    <script src="https://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
-    <script src="./bootstrap-typeahead.js"></script>
-
+    <link rel="stylesheet" href="style.css">
     <title>Graphe des dépendances des variables d'OpenFisca</title>
 </head>
 <body>
@@ -68,6 +63,8 @@
     </div>
 </div>
 <script src="//d3js.org/d3.v3.min.js"></script>
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//cdn.rawgit.com/bassjobsen/Bootstrap-3-Typeahead/master/bootstrap3-typeahead.min.js"></script>
 <script src="main.js"></script>
 <script>main();</script>
 </body>
