--- a/graph/index.html
+++ b/graph/index.html
@@ -25,9 +25,9 @@
             </div>
             <div class="collapse navbar-collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/presentation">Présentation</a></li>
-                    <li><a href="/documentation">Documentation</a></li>
-                    <li><a href="/outils">Outils</a></li>
+                    <li><a href="https://www.openfisca.fr/presentation">Présentation</a></li>
+                    <li><a href="https://www.openfisca.fr/documentation">Documentation</a></li>
+                    <li><a href="https://www.openfisca.fr/outils">Outils</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -38,7 +38,7 @@
                         </form>
                     </li>
                     <li><a href="/about">À propos</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="https://www.openfisca.fr/contact">Contact</a></li>
                 </ul>
             </div>
         </div>
