--- a/graph/index.html
+++ b/graph/index.html
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="https://www.openfisca.fr/presentation">Présentation</a></li>
                     <li><a href="https://www.openfisca.fr/documentation">Documentation</a></li>
-                    <li><a href="https://www.openfisca.fr/outils">Outils</a></li>
+                    <li><a href="https://www.openfisca.fr/tools">Outils</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
