Use french term

--- a/graph/index.html
+++ b/graph/index.html
@@ -33,7 +33,7 @@
                     <li>
                         <form class="navbar-form">
                             <div class="form-group">
-                                <input id="search-bar" type="text" class="form-control" placeholder="Search" onkeypress="update_graph();">
+                                <input id="search-bar" type="text" class="form-control" placeholder="Rechercher" onkeypress="update_graph();">
                             </div>
                         </form>
                     </li>
