--- a/graph/index.html
+++ b/graph/index.html
@@ -50,7 +50,7 @@
         <svg class="col-xs-12 col-sm-6 col-md-8"></svg>
         <iframe class="right-column col-xs-12 col-sm-6 col-md-4" id="info" onload=""></iframe>
         <div class="legend" id="legend">
-            Selection en:
+            Sélection en:
             <div class="btn btn-success node-size" onclick="toggle_important_current();">Gros</div>
             <div class="btn btn-default node-size" onclick="toggle_default_current();">Moyen</div>
             <div class="btn btn-warning node-size" onclick="toggle_unimportant_current();">Petit</div>
