Update navbar links

--- a/graph/index.html
+++ b/graph/index.html
@@ -25,9 +25,8 @@
             </div>
             <div class="collapse navbar-collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="https://www.openfisca.fr/presentation">Présentation</a></li>
-                    <li><a href="https://www.openfisca.fr/documentation">Documentation</a></li>
-                    <li><a href="https://www.openfisca.fr/tools">Outils</a></li>
+                    <li><a href="http://doc.openfisca.fr/en/index.html">Documentation</a></li>
+                    <li><a href="https://forum.openfisca.fr/">Forum</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -37,7 +36,6 @@
                             </div>
                         </form>
                     </li>
-                    <li><a href="/about">À propos</a></li>
                     <li><a href="https://www.openfisca.fr/contact">Contact</a></li>
                 </ul>
             </div>
