--- a/graph/index.html
+++ b/graph/index.html
@@ -72,14 +72,14 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//stats.data.gouv.fr/";
+    var u="https://stats.data.gouv.fr/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
     _paq.push(['setSiteId', '4']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
     g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
   })();
 </script>
-<noscript><p><img src="//stats.data.gouv.fr/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
+<noscript><p><img src="https://stats.data.gouv.fr/piwik.php?idsite=4" style="border:0;" alt="" /></p></noscript>
 <!-- End Piwik Code -->
 </body>
 </html>
